--- a/WebTool-AI/Views/Shared/User.cshtml
+++ b/WebTool-AI/Views/Shared/User.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Arab Investor Award</title>
     <link rel="icon" href="~/Images/favicon.png" type="image/x-icon" />
-    <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Amiri:400,400i,700,700i&amp;subset=arabic" rel="stylesheet">
     @Styles.Render("~/Content/tablecss")
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/themes/base/css")
@@ -33,25 +33,25 @@
                         <li>
                             <a href="@Url.Action("Dashboard", "User")">
                                 <i class="ti-dashboard"></i>
-                                <p>Dashboard</p>
+                                <p>لوحة القيادة</p>
                             </a>
                         </li>
                         <li>
                             <a href="@Url.Action("CompanyBrief", "User")">
                                 <i class="ti-briefcase"></i>
-                                <p>Company Brief</p>
+                                <p>ملخص الشركة</p>
                             </a>
                         </li>
                         <li>
                             <a href="@Url.Action("CompanyStrategy", "User")">
                                 <i class="ti-light-bulb"></i>
-                                <p>Company Strategy</p>
+                                <p>استراتيجية الشركة</p>
                             </a>
                         </li>
                         <li>
                             <a href="@Url.Action("Questionnaire", "User")">
                                 <i class="ti-pencil"></i>
-                                <p>Questionnaire</p>
+                                <p>استطلاع</p>
                             </a>
                         </li>
                     </ul>
