--- a/WebTool-AI/Views/User/Questionnaire.cshtml
+++ b/WebTool-AI/Views/User/Questionnaire.cshtml
@@ -10,7 +10,7 @@
             <img class="main-heading-icon" src="~/Images/award-category/corporate-governance.png" />
         </div>
         <div class="col-lg-11">
-            <h3 class="main-heading">Corporate Governance</h3>
+            <h3 class="main-heading">حوكمة الشركات</h3>
         </div>
     </div>
 </div>
@@ -23,7 +23,7 @@
         <div class="card">
             <div class="content">
                 <div class="row questioncontent">
-                    <h1>QUESTIONNAIRE</h1>
+                    <h1>استبيان</h1>
                     <div class="panel-group" id="accordion">
                         <div class="panel panel-default">
                             <a data-toggle="collapse" data-parent="#accordion" href="#collapse1" aria-expanded="true">
@@ -41,18 +41,18 @@
                                                         <span class="checkbox-switch-handle"></span>
                                                     </span>
                                                 </label>
-                                                <label style="float:right;padding-right:10px;"><small class="text-success"><i class="fa fa-check-circle"></i>COMPLETED&nbsp;&nbsp;</small><small class="text-danger"><i class="fa fa-exclamation-circle"></i>INCOMPLETE&nbsp;&nbsp;</small></label>
+                                                <label style="float:right;padding-right:10px;"><small class="text-success"><i class="fa fa-check-circle"></i>منجز&nbsp;&nbsp;</small><small class="text-danger"><i class="fa fa-exclamation-circle"></i>غير مكتمل&nbsp;&nbsp;</small></label>
                                             </div>
-                                            <div class="col-lg-12"><h5>INN_CR01: Implementing Innovation Management Systems <a href="#" data-toggle="modal" data-target="#Criteria1"><i class="ti-info-alt"></i></a></h5></div>
+                                            <div class="col-lg-12"><h5>INN_CR01: تنفيذ نظم إدارة الابتكار<a href="#" data-toggle="modal" data-target="#Criteria1"><i class="ti-info-alt"></i></a></h5></div>
                                         </div>
                                     </h4>
                                 </div>
                             </a>
                             <div id="collapse1" class="panel-collapse collapse in">
                                 <div class="panel-body">
-                                    <small class="text-danger"><i class="fa fa-info-circle"></i>CAUTION : ONCE A LEVEL IS SELECTED YOU WILL NOT BE ABLE TO CHOOSE ANOTHER.</small>
+                                    <small class="text-danger"><i class="fa fa-info-circle"></i>تنبيه: مرة واحدة يتم اختيار مستوى أنت لن تكون قادرة على اختيار آخر.</small>
                                     <div class="row">
-                                        <div class="col-lg-12 criteria-content"><h4 for="01" class="tn-headline">PART 1 <small><b>SCORE:<span class="score"></span></b></small></h4></div>
+                                        <div class="col-lg-12 criteria-content"><h4 for="01" class="tn-headline">النتيجة:<small><b>الجزء 1<span class="score"></span></b></small></h4></div>
                                         <div class="col-lg-6 criteria-content">
                                             <ul class="list">
                                                
@@ -62,28 +62,28 @@
                                                         Level #1
                                                     </label>
                                                 </li>
-                                                <div class="level-desc">There are no clear evidences on the existence of the practice within the organization.</div>
+                                                <div class="level-desc">ولا توجد أدلة واضحة على وجود هذه الممارسة داخل المنظمة.</div>
                                                 <li>
                                                     <label>
                                                         <input type="radio" class="option-input radio" value="2"  id="radio1" />
                                                         Level #2
                                                     </label>
                                                 </li>
-                                                <div class="level-desc"><span>There are clear evidences on establishing will structured and effective processes,</span><span > methods, and measures, that are suitable for the organization business nature, meets all stakeholders needs, and contribute to achieve business strategy.</span></div>
+                                                <div class="level-desc"><span>وهناك دلائل واضحة على إنشاء عمليات وأساليب وقياسات منظمة وفعالة، وهي مناسبة لطبيعة أعمال المنظمة، وتلبية جميع احتياجات أصحاب المصلحة، والمساهمة في تحقيق استراتيجية الأعمال.</span></div>
                                                 <li>
                                                     <label>
                                                         <input type="radio" class="option-input radio" value="3"  id="radio1" />
                                                         Level #3
                                                     </label>
                                                 </li>
-                                                <div class="level-desc">There are clear evidences on implementing the organization processes<span > and methods systematically, comprehensively, and efficiently through optimum utilization of resources.</span></div>
+                                                <div class="level-desc">وهناك أدلة واضحة على تنفيذ عمليات المنظمة وأساليبها بطريقة منهجية وشاملة وفعالة من خلال الاستخدام الأمثل للموارد.</span></div>
                                                 <li>
                                                     <label>
                                                         <input type="radio" class="option-input radio" value="4"  id="radio1" />
                                                         Level #4
                                                     </label>
                                                 </li>
-                                                <div class="level-desc">There are clear evidences that the organization use innovation and creativity<span > to improve their practices, based on continuous learning from their performance measures and best practices.</span></div>
+                                                <div class="level-desc">وهناك أدلة واضحة على أن المنظمة تستخدم الابتكار والإبداع لتحسين ممارساتها، استنادا إلى التعلم المستمر من مقاييس الأداء وأفضل الممارسات.</span></div>
                                         </div>
                                         <div class="col-lg-6">
                                             <div class="textboxes" style="display:none;">
@@ -137,7 +137,7 @@
                                         </div>
                                     </div>
                                     <div class="row" style="padding:20px;">
-                                        <a class="btn next-acc" style="float:right;" data-toggle="collapse" data-parent="#accordion" href="#collapse2">Next</a>
+                                        <a class="btn next-acc" style="float:right;" data-toggle="collapse" data-parent="#accordion" href="#collapse2">التالى</a>
                                     </div>
                                 </div>
                             </div>
@@ -157,7 +157,7 @@
                                                         <span class="checkbox-switch-off"></span>
                                                         <span class="checkbox-switch-handle"></span>
                                                     </span>
-                                                </label><label style="float:right;padding-right:10px;"><small class="text-success"><i class="fa fa-check-circle"></i>COMPLETED&nbsp;&nbsp;</small><small class="text-danger"><i class="fa fa-exclamation-circle"></i>INCOMPLETE&nbsp;&nbsp;</small></label>
+                                                </label><label style="float:right;padding-right:10px;"><small class="text-success"><i class="fa fa-check-circle"></i>منجز&nbsp;&nbsp;</small><small class="text-danger"><i class="fa fa-exclamation-circle"></i>غير مكتمل&nbsp;&nbsp;</small></label>
                                             </div>
                                             <div class="col-lg-12"><h5>INN_CR02: Offering an ecosystem and programs enabling employees to contribute to innovation and creativity related activities <a href="#" data-toggle="modal" data-target="#Criteria2"><i class="ti-info-alt"></i></a></h5></div>
                                         </div>
@@ -274,7 +274,7 @@
                                                         <span class="checkbox-switch-off"></span>
                                                         <span class="checkbox-switch-handle"></span>
                                                     </span>
-                                                </label><label style="float:right;padding-right:10px;"><small class="text-success"><i class="fa fa-check-circle"></i>COMPLETED&nbsp;&nbsp;</small><small class="text-danger"><i class="fa fa-exclamation-circle"></i>INCOMPLETE&nbsp;&nbsp;</small></label>
+                                                </label><label style="float:right;padding-right:10px;"><small class="text-success"><i class="fa fa-check-circle"></i>منجز&nbsp;&nbsp;</small><small class="text-danger"><i class="fa fa-exclamation-circle"></i>غير مكتمل&nbsp;&nbsp;</small></label>
                                             </div>
                                             <div class="col-lg-12"><h5>INN_CR03: Establishing partnerships with universities and research centres <a href="#" data-toggle="modal" data-target="#Criteria3"><i class="ti-info-alt"></i></a></h5></div>
                                         </div>
@@ -391,7 +391,7 @@
                                                         <span class="checkbox-switch-off"></span>
                                                         <span class="checkbox-switch-handle"></span>
                                                     </span>
-                                                </label><label style="float:right;padding-right:10px;"><small class="text-success"><i class="fa fa-check-circle"></i>COMPLETED&nbsp;&nbsp;</small><small class="text-danger"><i class="fa fa-exclamation-circle"></i>INCOMPLETE&nbsp;&nbsp;</small></label>
+                                                </label><label style="float:right;padding-right:10px;"><small class="text-success"><i class="fa fa-check-circle"></i>منجز&nbsp;&nbsp;</small><small class="text-danger"><i class="fa fa-exclamation-circle"></i>غير مكتمل&nbsp;&nbsp;</small></label>
                                             </div>
                                             <div class="col-lg-12"><h5>INN_CR04: Showing an ability to identify opportunities for creativity and innovation <a href="#" data-toggle="modal" data-target="#Criteria4"><i class="ti-info-alt"></i></a></h5></div>
                                         </div>
@@ -508,7 +508,7 @@
                                                         <span class="checkbox-switch-off"></span>
                                                         <span class="checkbox-switch-handle"></span>
                                                     </span>
-                                                </label><label style="float:right;padding-right:10px;"><small class="text-success"><i class="fa fa-check-circle"></i>COMPLETED&nbsp;&nbsp;</small><small class="text-danger"><i class="fa fa-exclamation-circle"></i>INCOMPLETE&nbsp;&nbsp;</small></label>
+                                                </label><label style="float:right;padding-right:10px;"><small class="text-success"><i class="fa fa-check-circle"></i>منجز&nbsp;&nbsp;</small><small class="text-danger"><i class="fa fa-exclamation-circle"></i>غير مكتمل&nbsp;&nbsp;</small></label>
                                             </div>
                                             <div class="col-lg-12"><h5>INN_CR05: Realizing innovative product or service designs that exceeded customers’ expectations <a href="#" data-toggle="modal" data-target="#Criteria5"><i class="ti-info-alt"></i></a></h5></div>
                                         </div>
@@ -625,7 +625,7 @@
                                                         <span class="checkbox-switch-off"></span>
                                                         <span class="checkbox-switch-handle"></span>
                                                     </span>
-                                                </label><label style="float:right;padding-right:10px;"><small class="text-success"><i class="fa fa-check-circle"></i>COMPLETED&nbsp;&nbsp;</small><small class="text-danger"><i class="fa fa-exclamation-circle"></i>INCOMPLETE&nbsp;&nbsp;</small></label>
+                                                </label><label style="float:right;padding-right:10px;"><small class="text-success"><i class="fa fa-check-circle"></i>منجز&nbsp;&nbsp;</small><small class="text-danger"><i class="fa fa-exclamation-circle"></i>غير مكتمل&nbsp;&nbsp;</small></label>
                                             </div>
                                             <div class="col-lg-12"><h5>INN_CR06: Carrying new initiatives in the past 2 years that have resulted in tangible benefits for customers <a href="#" data-toggle="modal" data-target="#Criteria6"><i class="ti-info-alt"></i></a></h5></div>
                                         </div>
@@ -742,7 +742,7 @@
                                                         <span class="checkbox-switch-off"></span>
                                                         <span class="checkbox-switch-handle"></span>
                                                     </span>
-                                                </label><label style="float:right;padding-right:10px;"><small class="text-success"><i class="fa fa-check-circle"></i>COMPLETED&nbsp;&nbsp;</small><small class="text-danger"><i class="fa fa-exclamation-circle"></i>INCOMPLETE&nbsp;&nbsp;</small></label>
+                                                </label><label style="float:right;padding-right:10px;"><small class="text-success"><i class="fa fa-check-circle"></i>منجز&nbsp;&nbsp;</small><small class="text-danger"><i class="fa fa-exclamation-circle"></i>غير مكتمل&nbsp;&nbsp;</small></label>
                                             </div>
                                             <div class="col-lg-12"><h5>INN_CR07: Demonstrating innovation in data utilization for gaining deeper understanding of customers’ needs. <a href="#" data-toggle="modal" data-target="#Criteria7"><i class="ti-info-alt"></i></a></h5></div>
                                         </div>
