--- a/WebTool-AI/Content/Login.css
+++ b/WebTool-AI/Content/Login.css
@@ -16,7 +16,7 @@
     -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.65);
     -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.65);
     box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.65);
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Amiri', sans-serif;
     margin-bottom: 30px;
 }
 .registerrow {
@@ -28,7 +28,7 @@
     -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.65);
     -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.65);
     box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.65);
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Amiri', sans-serif;
     margin-bottom: 30px;
 }
 
@@ -58,7 +58,7 @@
 
 .login-heading {
     padding-left: 20px;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Amiri', sans-serif;
     font-weight: 100;
 }
 
