--- a/WebTool-AI/Content/css/login-rtl.css
+++ b/WebTool-AI/Content/css/login-rtl.css
@@ -16,7 +16,7 @@
     -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.65);
     -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.65);
     box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.65);
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Amiri', sans-serif;
     margin-bottom: 30px;
 }
 
@@ -29,7 +29,7 @@
     -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.65);
     -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.65);
     box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.65);
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Amiri', sans-serif;
     margin-bottom: 30px;
 }
 
@@ -59,7 +59,7 @@
 
 .login-heading {
     padding-left: 20px;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Amiri', sans-serif;
     font-weight: 100;
 }
 
