--- a/WebTool-AI/Views/Shared/_Layout.cshtml
+++ b/WebTool-AI/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Arab Investor Award</title>
     <link rel="icon" href="~/Images/favicon.png" type="image/x-icon" />
-    <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Amiri:400,400i,700,700i&amp;subset=arabic" rel="stylesheet">
     @Styles.Render("~/Content/themes/base/css")
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/tablecss")
