--- a/WebTool-AI/Views/Shared/_Login.cshtml
+++ b/WebTool-AI/Views/Shared/_Login.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Arab Investor Award</title>
     <link rel="icon" href="~/Images/favicon.png" type="image/x-icon" />
-    <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amiri:400,400i,700,700i&amp;subset=arabic" rel="stylesheet">
     @Styles.Render("~/Content/logincss")
     @Scripts.Render("~/bundles/modernizr")
     @Styles.Render("~/Content/bootstrap/loginrtl")
